# coqtail-math

./: .gitignore  .travis.yml  LICENSE  Make  Makefile  README  README.md  Tools.v  _CoqProject  alter_doc.sh  coq-coqtail.opam  coqdoc.css  default.nix  dune  dune-project  generate_makedep.sh  generate_makefile.sh  help.sh  index.css  meta.yml  status.sh  todos.sh
Arith/: Hurwitz.v  Hurwitz_def.v  Hurwitz_prop.v  Lagrange_four_square.v  MillerRabin.v  MillerRabinCheck.v  Modulo.v  Natsets.v  Nbinomial.v  Ndiv.v  Nfinite_prod.v  Nfinite_sum.v  Ninductions.v  Nk_ind.v  Nle.v  Nlittle_fermat.v  Nminus.v  Nnewton.v  Npow.v  Ntools.v  PI.v  STATE  Zeqm.v  Zlittle_fermat.v  Znumfacts.v  Zpow.v  Zprime.v  Ztools.v  lagrange4s.ml
Complex/: CFsequence.v  CFsequence_facts.v  Canalysis_basic_facts.v  Canalysis_cont.v  Canalysis_def.v  Canalysis_deriv.v  Canalysis_diff.v  Cbase.v  Cdefinitions.v  Cderiv.v  Cexp.v  Cexp2.v  Cfunctions.v  Cmet.v  Cnorm.v  Complex.v  Cpolar.v  Cpow.v  Cpow_plus.v  Cprop_base.v  Cpser_base_facts.v  Cpser_def.v  Cpser_facts.v  Croot_n.v  Csequence.v  Csequence_def.v  Csequence_facts.v  Cseries.v  Cseries_facts.v  Ctacfield.v
Finite_Calculus/: Definitions.v  README
Fresh/: create.sh
Graphs/: definitions.v
Hierarchy/: Commutative_ring_binomial.v  Type_class_definition.v  Type_class_definition_beta.v  Type_class_instance.v  Type_class_instance_beta.v  Vector_space_facts.v
Modulo/: Modulo.v
Monad/: Option.v
Reals/: C_n.v  C_n_def.v  C_n_facts.v  C_n_not_extensional.v  C_n_usual.v  Cauchy_lipschitz.v  Dequa_def.v  Dequa_examples.v  Hopital.v  (+76 more)
(+120 files in other folders)
