(coq.theory
 (name Coqtail)
 (package coq-coqtail)
 (synopsis "Library of mathematical theorems and tools proved inside the Coq")
 (flags :standard
   -w -deprecated-hint-without-locality
   -w -deprecated-hint-rewrite-without-locality
   -w -deprecated-instance-without-locality))

(include_subdirs qualified)
